benchmark: New benchmark for testing contention when creating buffers

--- a/gstreamer/tests/benchmarks/Makefile.am
+++ b/gstreamer/tests/benchmarks/Makefile.am
@@ -5,7 +5,8 @@ noinst_PROGRAMS = \
         init \
         mass-elements \
         gstpollstress \
-        gstclockstress
+        gstclockstress	\
+	gstbufferstress
 
 LDADD = $(GST_OBJ_LIBS)
 AM_CFLAGS = $(GST_OBJ_CFLAGS)
