man: fix copy and past mistake for -q option

--- a/gstreamer/tools/gst-launch.1.in
+++ b/gstreamer/tools/gst-launch.1.in
@@ -30,7 +30,7 @@ Print help synopsis and available FLAGS
 .B  \-v, \-\-verbose
 Output status information and property notifications
 .TP 8
-.B  \-v, \-\-quiet
+.B  \-q, \-\-quiet
 Do not print any progress information
 .TP 8
 .B  \-m, \-\-messages
