Update makefile with missing header file

--- a/gst-plugins-good/ext/dv/Makefile.am
+++ b/gst-plugins-good/ext/dv/Makefile.am
@@ -8,7 +8,7 @@ libgstdv_la_LIBADD = \
 libgstdv_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstdv_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = gstdvdemux.h gstdvdec.h
+noinst_HEADERS = gstdvdemux.h gstdvdec.h gstsmptetimecode.h
 
 EXTRA_DIST = NOTES
 
