resindvdbin: Post missing decoder messages if one is missing
For video this is an error, for audio only a warning.

--- a/gst-plugins-bad/ext/resindvd/Makefile.am
+++ b/gst-plugins-bad/ext/resindvd/Makefile.am
@@ -21,6 +21,7 @@ libresindvd_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) \
 $(GST_CFLAGS) $(DVDNAV_CFLAGS)
 libresindvd_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) \
 -lgstinterfaces-$(GST_MAJORMINOR) -lgstvideo-$(GST_MAJORMINOR) \
+-lgstpbutils-$(GST_MAJORMINOR) \
 $(GST_BASE_LIBS) $(GST_LIBS) $(DVDNAV_LIBS)
 libresindvd_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libresindvd_la_LIBTOOLFLAGS = --tag=disable-static
