videomeasure: link with libm

--- a/gst-plugins-bad/gst/videomeasure/Makefile.am
+++ b/gst-plugins-bad/gst/videomeasure/Makefile.am
@@ -11,7 +11,7 @@ libgstvideomeasure_la_SOURCES = \
 libgstvideomeasure_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) \
     $(GST_PLUGINS_BASE_CFLAGS)
 libgstvideomeasure_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) \
-    -lgstvideo-@GST_MAJORMINOR@ $(GST_BASE_LIBS) $(GST_LIBS)
+    -lgstvideo-@GST_MAJORMINOR@ $(GST_BASE_LIBS) $(GST_LIBS) $(LIBM)
 libgstvideomeasure_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvideomeasure_la_LIBTOOLFLAGS = --tag=disable-static
 
