dirac: convert to BaseVideoEncoder

--- a/gst-plugins-bad/ext/dirac/Makefile.am
+++ b/gst-plugins-bad/ext/dirac/Makefile.am
@@ -4,8 +4,11 @@ libgstdirac_la_SOURCES = \
 	gstdirac.cc \
 	gstdiracenc.cc
 
-libgstdirac_la_CXXFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CXXFLAGS) $(DIRAC_CFLAGS)
-libgstdirac_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(DIRAC_LIBS) -lz $(LIBM)
+libgstdirac_la_CXXFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CXXFLAGS) $(DIRAC_CFLAGS) \
+	-DGST_USE_UNSTABLE_API
+libgstdirac_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) \
+	$(top_builddir)/gst-libs/gst/video/libgstbasevideo-@GST_MAJORMINOR@.la \
+	$(DIRAC_LIBS) -lz $(LIBM)
 libgstdirac_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstdirac_la_LIBTOOLFLAGS = --tag=disable-static
 
