childproxy: initialize gvalue in _valist function. Fixes #595602
Reflow the code to move error handling to the end of the functions. Initialize
gvalue like we do in the setter. Add a unit-test module with two simple tests
the catche this bug.

--- a/gstreamer/tests/check/Makefile.am
+++ b/gstreamer/tests/check/Makefile.am
@@ -46,6 +46,7 @@ else
 REGISTRY_CHECKS =				\
 	gst/gst					\
 	gst/gstbin				\
+	gst/gstchildproxy			\
 	gst/gstelement				\
 	gst/gstevent				\
 	gst/gstghostpad				\
