streamvolume: Define cbrt() if it's not available
Fixes build on Win32, bug #597537.

--- a/gst-plugins-base/configure.ac
+++ b/gst-plugins-base/configure.ac
@@ -202,6 +202,12 @@ AX_CREATE_STDINT_H
 dnl *** checks for functions ***
 AC_CHECK_FUNCS([localtime_r gmtime_r])
 
+dnl *** checks for math functions ***
+LIBS_SAVE=$LIBS
+LIBS="$LIBS $LIBM"
+AC_CHECK_FUNCS(cbrt)
+LIBS=$LIBS_SAVE
+
 dnl *** checks for types/defines ***
 
 dnl Check for FIONREAD ioctl declaration
