check: Fix test run in tests/examples/manual
Add the GST_PLUGIN_SCANNER env var to the check environment here too
so that it doesn't fail when no installed scanner is available.

--- a/gstreamer/tests/examples/manual/Makefile.am
+++ b/gstreamer/tests/examples/manual/Makefile.am
@@ -22,6 +22,7 @@ REGISTRY_ENVIRONMENT = \
 
 TESTS_ENVIRONMENT = \
         $(REGISTRY_ENVIRONMENT)                                 \
+        GST_PLUGIN_SCANNER=$(top_builddir)/libs/gst/helpers/plugin-scanner \
         GST_PLUGIN_SYSTEM_PATH=                                 \
         GST_PLUGIN_PATH=$(top_builddir)/plugins
 
