capssetter: add unit test

--- a/gst-plugins-bad/tests/check/Makefile.am
+++ b/gst-plugins-bad/tests/check/Makefile.am
@@ -110,6 +110,7 @@ check_PROGRAMS = \
 	elements/aacparse \
 	elements/amrparse \
 	elements/asfmux \
+	elements/capssetter \
 	elements/legacyresample \
 	elements/qtmux \
 	elements/selector \
