--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libvorbis"]
 	path = libvorbis
 	url = ../libvorbis.git
+[submodule "libtheora"]
+	path = libtheora
+	url = ../libtheora.git
