gst-plugins-base 0.10.25 + Opera modifications

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "gstreamer"]
 	path = gstreamer
 	url = ../gstreamer.git
+[submodule "gst-plugins-base"]
+	path = gst-plugins-base
+	url = ../gst-plugins-base.git
