--- a/gstreamer.vcproj
+++ b/gstreamer.vcproj
@@ -136,7 +136,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib"
-				OutputFile="$(OutDir)\$(ProjectName).dlx"
+				OutputFile="$(OutDir)\$(ProjectName).dll"
 				ModuleDefinitionFile="gstreamer.def"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
@@ -163,7 +163,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="mkdir dist&#x0D;&#x0A;copy /y &quot;$(TargetDir)$(TargetName).dlx&quot; dist&#x0D;&#x0A;copy /y &quot;$(TargetDir)$(TargetName).pdb&quot; dist&#x0D;&#x0A;"
+				CommandLine="mkdir dist&#x0D;&#x0A;copy /y &quot;$(TargetDir)$(TargetName).dll&quot; dist&#x0D;&#x0A;copy /y &quot;$(TargetDir)$(TargetName).pdb&quot; dist&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
