yet more trickery to remove various parts of GLib on Mac

--- a/glib/configure.in
+++ b/glib/configure.in
@@ -366,6 +366,7 @@ AC_SUBST(PERL_PATH)
 AM_PATH_PYTHON(2.4,,PYTHON="/usr/bin/env python2.4")
 
 AC_SUBST(ICONV_LIBS)
+AC_SUBST(INTLLIBS)
 
 dnl Initialize libtool
 AM_DISABLE_STATIC
